--- a/Pages/UserManagement/Add.cshtml
+++ b/Pages/UserManagement/Add.cshtml
@@ -184,7 +184,7 @@ else
             button.disabled = true;
 
             // Change the text of the button
-            button.innerText = 'Loading...';
+            button.innerText = 'Processing...';
         });
 
         // Disable the button if it should be disabled
