--- a/Pages/UserManagement/Add.cshtml
+++ b/Pages/UserManagement/Add.cshtml
@@ -104,7 +104,7 @@ else
 
             <!-- Cancel and Save Button -->
             <div class="d-grid gap-2 d-sm-flex justify-content-sm-center">
-                <a href="/usermanagement/index" type="button" class="btn btn-outline-secondary px-4 gap-3">Cancel</a>
+                <a href="/usermanagement/index" type="button" class="btn btn-outline-secondary px-4 gap-3" id="cancelBtn">Cancel</a>
                 <button type="submit" class="btn btn-primary px-4" id="submitBtn">
                     Next
                     <i class="bi bi-arrow-right" style="padding:5px"></i>
@@ -174,22 +174,44 @@ else
     });
 </script>
 
+<!-- Enable/disable "Cancel" and "Save" buttons -->
 <script>
     document.addEventListener('DOMContentLoaded', function () {
+        const cancelButton = document.getElementById('cancelBtn');
+        const saveButton = document.getElementById('submitBtn');
         const form = document.querySelector('form');
-        const button = document.getElementById('submitBtn');
 
-        form.addEventListener('submit', function (event) {
-            // Disable the button to prevent multiple submissions
-            button.disabled = true;
+        cancelButton.addEventListener('click', function (event) {
+            // Change the text and styling of the Cancel button
+            cancelButton.classList.add('processing-btn');
+            cancelButton.innerText = 'Processing...';
 
-            // Change the text of the button
-            button.innerText = 'Processing...';
+            // Disable the Save button to prevent multiple submissions
+            saveButton.disabled = true;
+
+            // Allow the default link behavior (redirect) after a short animation frame
+            requestAnimationFrame(function () {
+                window.location.href = cancelButton.getAttribute('href');
+            });
         });
 
-        // Disable the button if it should be disabled
-        if (@Model.IsAddButtonDisabled) {
-            button.disabled = true;
-        }
+        saveButton.addEventListener('click', function () {
+            // Disable both buttons to prevent multiple submissions
+            cancelButton.classList.add('processing-btn');
+            saveButton.disabled = true;
+
+            // Change the text of the Save button
+            saveButton.innerText = 'Processing...';
+
+            // Submit the form
+            form.submit();
+        });
     });
 </script>
+
+<style>
+    .processing-btn {
+        pointer-events: none;
+        opacity: 0.5;
+    }
+</style>
