--- a/Pages/UserManagement/ECStaff/Add.cshtml
+++ b/Pages/UserManagement/ECStaff/Add.cshtml
@@ -151,20 +151,11 @@ else
                 </div>
             </div>
 
-
-            @if (!string.IsNullOrEmpty(Model.successMessage))
-            {
-                <div class="alert alert-success alert-dismissible fade show" role="alert">
-                    <strong>@Model.successMessage</strong>
-                    <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
-                </div>
-            }
-
             <br />
 
             <!-- Cancel and Save Button -->
             <div class="d-grid gap-2 d-sm-flex justify-content-sm-center">
-                <a href="/usermanagement/ecstaff/add?userID=@Model.userID&action=cancel&userIDToDelete=@Model.userID" 
+                <a href="/usermanagement/ecstaff/add?userID=@Model.userID&action=cancel" 
                 type="button" class="btn btn-outline-secondary px-4 gap-3" id="cancleBtn">Cancel</a>
                 <button type="submit" class="btn btn-primary px-4" id="submitBtn">Add</button>
             </div>
@@ -227,10 +218,10 @@ else
             // Disable the Save button to prevent multiple submissions
             saveButton.disabled = true;
 
-            // Allow the default link behavior (redirect) after a short animation frame
-            requestAnimationFrame(function () {
+            // Redirect to the specified href after a short delay
+            setTimeout(function () {
                 window.location.href = cancelButton.getAttribute('href');
-            });
+            }, 500);
         });
 
         saveButton.addEventListener('click', function () {
