renamed id for cancel button

--- a/Pages/UserManagement/ECStaff/Add.cshtml
+++ b/Pages/UserManagement/ECStaff/Add.cshtml
@@ -156,7 +156,7 @@ else
             <!-- Cancel and Save Button -->
             <div class="d-grid gap-2 d-sm-flex justify-content-sm-center">
                 <a href="/usermanagement/ecstaff/add?userID=@Model.userID&action=cancel" 
-                type="button" class="btn btn-outline-secondary px-4 gap-3" id="cancleBtn">Cancel</a>
+                type="button" class="btn btn-outline-secondary px-4 gap-3" id="cancelBtn">Cancel</a>
                 <button type="submit" class="btn btn-primary px-4" id="submitBtn">Add</button>
             </div>
         </form>
