--- a/Pages/UserManagement/Index.cshtml
+++ b/Pages/UserManagement/Index.cshtml
@@ -83,9 +83,7 @@ else
 <!-- Title and Add Button-->
 <div class="row mb-2">
     <div class="col-12 d-flex align-items-center justify-content-between">
-        <h1><i class="bi bi-person-lines-fill" style="padding: 0 5px 0 5px;"></i>User Management</h1>
-        @*<p>User ID: @Model.UserId</p>
-        <p>User Type: @Model.UserType</p>*@
+        <h1><i class="bi bi-person-lines-fill" style="padding: 0 5px 0 5px;"></i>User Management</h1>        
 
         <div class="d-flex justify-content-end align-items-center">
             <a class="btn btn-primary mb-2 d-none d-sm-inline" href="/usermanagement/add">
@@ -105,10 +103,11 @@ else
         <thead>
             <tr>
                 <th width="5%">#</th>
-                <th width="15%">Username</th>
-                <th width="25%">User Type</th>
+                <th width="20%">Username</th>
+                <th width="20%">User Type</th>
                 <th width="25%">Created At</th>
-                <th width="10%"></th>
+                <th width="25%">Last Login</th>
+                <th width="5%"></th>
             </tr>
         </thead>
         <tbody>
@@ -122,6 +121,7 @@ else
                     <td>@item.username</td>
                     <td>@item.userType</td>
                     <td>@item.createdAt</td>
+                    <td>@item.lastLogin</td>
                     <td>
                         <div class="d-inline position-relative">
                             <a href="#" role="button" id="recordOptions" data-bs-toggle="dropdown" aria-expanded="false">
@@ -225,8 +225,8 @@ else
             responsive: true,
             pageLength: 25,
             columnDefs: [
-                { "orderable": true, "targets": [0, 1, 3] }, // Sortable columns
-                { "orderable": false, "targets": [2, 4] } // Non-sortable columns
+                { "orderable": true, "targets": [0, 1, 3, 4] }, // Sortable columns
+                { "orderable": false, "targets": [2, 5] } // Non-sortable columns
             ]
         });
 
