--- a/Pages/Index.cshtml
+++ b/Pages/Index.cshtml
@@ -145,6 +145,99 @@ else
     </div>
 }
 
+<!-- Start Inbox -->
+<div class="container">
+        <div class="row justify-content-center">
+            <div class="col-md-14">
+                <div class="card">
+                    <div class="card-header">
+                        <h3 class="card-title"><b>Inbox</b></h3>
+                        <!-- /.card-tools -->
+                    </div>
+                    <div class="card-body p-1">
+                        <div class="table-responsive mailbox-messages" style="max-height: 160px; overflow-y: auto;">
+                            <table class="table table-hover">
+                                <tbody>
+                                    <tr class="openMail" data-msgid="2302060001" data-msgsubj="You have a new assignment!" data-msgfrom="noreply@agapay" data-msgdate="">
+                                        <td class="mailbox-date">February 06, 2023</td>
+                                        <td class="mailbox-subject">You have a new assignment!<br></td>
+                                        <td class="mailbox-date text-danger"><i class="bi bi-envelope-paper-fill"></i></td>
+                                    </tr>
+
+                                    <tr class="openMail" data-msgid="2109240001" data-msgsubj="You have a new assignment!" data-msgfrom="noreply@agapay" data-msgdate="">
+                                        <td class="mailbox-date">September 24, 2021</td>
+                                        <td class="mailbox-subject">You have a new assignment!<br></td>
+                                        <td class="mailbox-date text-danger"><i class="bi bi-envelope-paper-fill"></i></td>
+                                    </tr>
+
+                                    <tr class="openMail" data-msgid="2011190001" data-msgsubj="You have a new assignment!" data-msgfrom="noreply@agapay" data-msgdate="">
+                                        <td class="mailbox-date">November 19, 2020</td>
+                                        <td class="mailbox-subject">You have a new assignment!0<br></td>
+                                        <td class="mailbox-date text-danger"><i class="bi bi-envelope-paper-fill"></i></td>
+                                    </tr>
+
+                                    <tr class="openMail" data-msgid="2009290001" data-msgsubj="You have a new assignment!" data-msgfrom="noreply@agapay" data-msgdate="">
+                                        <td class="mailbox-date">September 29, 2020</td>
+                                        <td class="mailbox-subject">You have a new assignment!<br></td>
+                                        <td class="text-danger"><i class="bi bi-envelope-paper-fill"></i></td>
+                                    </tr>
+                                </tbody>
+                            </table>
+                        </div>
+                    </div>
+
+                </div>
+                <!-- /.card -->
+            </div>
+        </div>
+</div>
+
+<!-- MODAL -->
+<div class="modal fade" id="modal-msg" tabindex="-1" aria-labelledby="modal-msg-title" aria-hidden="true">
+    <div class="modal-dialog modal-lg">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h4 class="modal-title" id="modal-msg-title"></h4>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">×</span>
+                </button>
+            </div>
+            <div class="modal-body" id="modal-msg-body"></div>
+            <div class="modal-footer text-right">
+                <button type="button" class="btn btn-default" data-dismiss="modal">Redirect to page (placeholder)</button>
+            </div>
+        </div>
+    </div>
+</div>
+
+
+<script>
+    $(document).ready(function () {
+        // Handle click on table rows
+        $('.openMail').on('click', function () {
+            var subject = $(this).data('msgsubj');
+            var from = $(this).data('msgfrom');
+            var date = $(this).find('.mailbox-date').text();
+            var body = $(this).find('.mailbox-subject').html();
+            var evacuationCenter = $(this).data('evacuation-center');
+            var disasterName = $(this).data('disaster-name');
+
+            // Set modal content dynamically
+            $('#modal-msg-title').text(subject);
+            $('#modal-msg-body').html('<h6>From: <span id="msg-from">' + from + '</span><span class="mailbox-read-time float-right"><span id="msg-date">' + date + '</span></span></h6>' +
+                '<p id="msg-body">' + body + '</p>' +
+                '<p>Evacuation Center: ' + evacuationCenter + '</p>' +
+                '<p>Disaster Name: ' + disasterName + '</p>');
+
+            // Show the modal
+            $('#modal-msg').modal('show');
+        });
+    });
+</script>
+<!-- End Inbox -->
+
+
+
 <div class="container form-container1">
     <div class="container form-container-content1">
         <!-- Title, Info Button, Menu Button -->
