icon for read and unread mail

--- a/Pages/Notification.cshtml
+++ b/Pages/Notification.cshtml
@@ -18,25 +18,25 @@
                             <tr class="openMail" data-msgid="2302060001" data-msgsubj="You have a new assignment!" data-msgfrom="noreply@agapay" data-msgdate="">
 							<td class="mailbox-date">February 06, 2023</td>
                             <td class="mailbox-subject">You have a new assignment!<br></td>
-							<td class="mailbox-date text-danger"><i class="bi bi-envelope-paper-fill"></i></td>
+							<td class="mailbox-date text-success"><i class="bi bi-envelope-paper-fill"></i></td>
 							</tr>
 
                             <tr class="openMail" data-msgid="2109240001" data-msgsubj="You have a new assignment!" data-msgfrom="noreply@agapay" data-msgdate="">
 							<td class="mailbox-date">September 24, 2021</td>
                             <td class="mailbox-subject">You have a new assignment!<br></td>
-							<td class="mailbox-date text-danger"><i class="bi bi-envelope-paper-fill"></i></td>
+                            <td class="mailbox-date text-danger"><i class="bi bi-envelope-fill"></i></td>
 							</tr>
 
                             <tr class="openMail" data-msgid="2011190001" data-msgsubj="You have a new assignment!" data-msgfrom="noreply@agapay" data-msgdate="">
 							<td class="mailbox-date">November 19, 2020</td>
-                            <td class="mailbox-subject">You have a new assignment!0<br></td>
-							<td class="mailbox-date text-danger"><i class="bi bi-envelope-paper-fill"></i></td>
+                            <td class="mailbox-subject">You have a new assignment!<br></td>
+                            <td class="mailbox-date text-danger"><i class="bi bi-envelope-fill"></i></td>
 							</tr>
 
                             <tr class="openMail" data-msgid="2009290001" data-msgsubj="You have a new assignment!" data-msgfrom="noreply@agapay" data-msgdate="">
 							<td class="mailbox-date">September 29, 2020</td>
-                             <td class="mailbox-subject">You have a new assignment!<br></td>
-							<td class="text-danger"><i class="bi bi-envelope-paper-fill"></i></td>
+                            <td class="mailbox-subject">You have a new assignment!<br></td>
+                            <td class="mailbox-date text-danger"><i class="bi bi-envelope-fill"></i></td>
 							</tr>
 							</tbody>
 						</table>
