--- a/Pages/Index.cshtml
+++ b/Pages/Index.cshtml
@@ -204,7 +204,7 @@ else
             </div>
             <div class="modal-body" id="modal-msg-body"></div>
             <div class="modal-footer text-right">
-                <a href="/evacuationcenter/profile" class="btn btn-secondary" data-dismiss="modal">(placeholder)</a>
+                <a href="/evacuationcenter/profile" class="btn btn-secondary" data-dismiss="modal">Go to assigned Center</a>
             </div>
         </div>
     </div>
