--- a/Pages/UserManagement/Add.cshtml
+++ b/Pages/UserManagement/Add.cshtml
@@ -197,7 +197,7 @@ else
     });
 </script>
 
-<!-- Enable/disable "Cancel" and "Save" buttons -->
+<!-- Enable/disable "Cancel" and "Add" buttons -->
 <script>
     document.addEventListener('DOMContentLoaded', function () {
         const cancelButton = document.getElementById('cancelBtn');
