--- a/Pages/Index.cshtml
+++ b/Pages/Index.cshtml
@@ -77,222 +77,137 @@ else
         transform: translateY(-50%);
         bottom: initial;
     }
+
+    .clickable-row:hover {
+        cursor: pointer;
+    }
  </style>
 
 <!--MAIN-->
-@section Dashboard {
-    <div id="myCarousel" class="carousel slide text-white" data-bs-ride="carousel" data-bs-touch="false" data-bs-interval="2000">
-        <div class="carousel-indicators">
-            <button type="button" data-bs-target="#myCarousel" data-bs-slide-to="0" class="" aria-label="Slide 1"></button>
-            <button type="button" data-bs-target="#myCarousel" data-bs-slide-to="1" aria-label="Slide 2" class=""></button>
-            <button type="button" data-bs-target="#myCarousel" data-bs-slide-to="2" aria-label="Slide 3" class="active" aria-current="true"></button>
-        </div>
-        <div class="carousel-inner">
-            <div class="carousel-item">
-                <img src="/images/ec1img.png" class="d-block w-100" alt="EC1 Image">
-                <div class="carousel-caption text-start">
-                    <div class="col-lg-6 col-md-12 p-lg-5 mx-auto my-5">
-                        <h1 class="text-white d-none d-sm-block">“Together, we stand stronger in the face of adversity.”</h1>
-                        <br class="d-none d-lg-block"/>
-                        <p class="d-none d-lg-block">
-                            Agapay Aid is a web-based application dedicated to aiding the disaster relief efforts in the Philippines.
-                            Our application streamlines the management of evacuation centers, ensuring efficient resource allocation, equitable relief goods distribution, staff coordination, and seamless registration of evacuees.
-                        </p>
-                        <br class="d-none d-lg-block"/>
-                        <p class="d-none d-lg-block"><a class="btn btn-primary" href="/about">Learn more about <b>Agapay</b>Aid</a></p>
-                    </div>
-                </div>
+@if (Model.UserType == null)
+{
+    @section Dashboard 
+    {
+        <div id="myCarousel" class="carousel slide text-white" data-bs-ride="carousel" data-bs-touch="false" data-bs-interval="2000">
+            <div class="carousel-indicators">
+                <button type="button" data-bs-target="#myCarousel" data-bs-slide-to="0" class="" aria-label="Slide 1"></button>
+                <button type="button" data-bs-target="#myCarousel" data-bs-slide-to="1" aria-label="Slide 2" class=""></button>
+                <button type="button" data-bs-target="#myCarousel" data-bs-slide-to="2" aria-label="Slide 3" class="active" aria-current="true"></button>
             </div>
-            <div class="carousel-item active">
-                <img src="/images/ec2img.png" class="d-block w-100" alt="EC2 Image">
-                <div class="carousel-caption text-start">
-                    <div class="col-lg-6 col-md-12 p-lg-5 mx-auto my-5">
-                        <h1 class="text-white d-none d-sm-block">“Together, we stand stronger in the face of adversity.”</h1>
-                        <br class="d-none d-lg-block" />
-                        <p class="d-none d-lg-block">
-                            Agapay Aid is a web-based application dedicated to aiding the disaster relief efforts in the Philippines.
-                            Our application streamlines the management of evacuation centers, ensuring efficient resource allocation, equitable relief goods distribution, staff coordination, and seamless registration of evacuees.
-                        </p>
-                        <br class="d-none d-lg-block" />
-                        <p class="d-none d-lg-block"><a class="btn btn-primary" href="/about">Learn more about <b>Agapay</b>Aid</a></p>
-                    </div>
-                </div>
-            </div>
-            <div class="carousel-item">
-                <img src="/images/ec3img.png" class="d-block w-100" alt="EC3 Image">
-                <div class="carousel-caption text-start">
-                    <div class="col-lg-6 col-md-12 p-lg-5 mx-auto my-5">
-                        <h1 class="text-white d-none d-sm-block">“Together, we stand stronger in the face of adversity.”</h1>
-                        <br class="d-none d-lg-block" />
-                        <p class="d-none d-lg-block">
-                            Agapay Aid is a web-based application dedicated to aiding the disaster relief efforts in the Philippines.
-                            Our application streamlines the management of evacuation centers, ensuring efficient resource allocation, equitable relief goods distribution, staff coordination, and seamless registration of evacuees.
-                        </p>
-                        <br class="d-none d-lg-block" />
-                        <p class="d-none d-lg-block"><a class="btn btn-primary" href="/about">Learn more about <b>Agapay</b>Aid</a></p>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <button class="carousel-control-prev" type="button" data-bs-target="#myCarousel" data-bs-slide="prev">
-            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-            <span class="visually-hidden">Previous</span>
-        </button>
-        <button class="carousel-control-next" type="button" data-bs-target="#myCarousel" data-bs-slide="next">
-            <span class="carousel-control-next-icon" aria-hidden="true"></span>
-            <span class="visually-hidden">Next</span>
-        </button>
-    </div>
-}
-
-<!-- Start Inbox -->
-<div class="container">
-        <div class="row justify-content-center">
-            <div class="col-md-14">
-                <div class="card">
-                    <div class="card-header">
-                        <h3 class="card-title"><b>Inbox</b></h3>
-                        <!-- /.card-tools -->
-                    </div>
-                    <div class="card-body p-1">
-                        <div class="table-responsive mailbox-messages" style="max-height: 160px; overflow-y: auto;">
-                            <table class="table table-hover">
-                                <tbody>
-                                    <tr class="openMail" data-msgid="2302060001" data-msgsubj="You have a new assignment!" data-msgfrom="noreply@agapay" data-msgdate="">
-                                        <td class="mailbox-date">February 06, 2023</td>
-                                        <td class="mailbox-subject">You have a new assignment!<br></td>
-                                    <td class="mailbox-date text-danger"><i class="bi bi-envelope-fill"></i></td>
-                                    </tr>
-
-                                    <tr class="openMail" data-msgid="2109240001" data-msgsubj="You have a new assignment!" data-msgfrom="noreply@agapay" data-msgdate="">
-                                        <td class="mailbox-date">September 24, 2021</td>
-                                        <td class="mailbox-subject">You have a new assignment!<br></td>
-                                        <td class="mailbox-date text-success"><i class="bi bi-envelope-paper-fill"></i></td>
-                                    </tr>
-
-                                    <tr class="openMail" data-msgid="2011190001" data-msgsubj="You have a new assignment!" data-msgfrom="noreply@agapay" data-msgdate="">
-                                        <td class="mailbox-date">November 19, 2020</td>
-                                        <td class="mailbox-subject">You have a new assignment!<br></td>
-                                        <td class="mailbox-date text-success"><i class="bi bi-envelope-paper-fill"></i></td>
-                                    </tr>
-
-                                    <tr class="openMail" data-msgid="2009290001" data-msgsubj="You have a new assignment!" data-msgfrom="noreply@agapay" data-msgdate="">
-                                        <td class="mailbox-date">September 29, 2020</td>
-                                        <td class="mailbox-subject">You have a new assignment!<br></td>
-                                        <td class="text-success"><i class="bi bi-envelope-paper-fill"></i></td>
-                                    </tr>
-                                </tbody>
-                            </table>
+            <div class="carousel-inner">
+                <div class="carousel-item">
+                    <img src="/images/ec1img.png" class="d-block w-100" alt="EC1 Image">
+                    <div class="carousel-caption text-start">
+                        <div class="col-lg-6 col-md-12 p-lg-5 mx-auto my-5">
+                            <h1 class="text-white d-none d-sm-block">“Together, we stand stronger in the face of adversity.”</h1>
+                            <br class="d-none d-lg-block" />
+                            <p class="d-none d-lg-block">
+                                Agapay Aid is a web-based application dedicated to aiding the disaster relief efforts in the Philippines.
+                                Our application streamlines the management of evacuation centers, ensuring efficient resource allocation, equitable relief goods distribution, staff coordination, and seamless registration of evacuees.
+                            </p>
+                            <br class="d-none d-lg-block" />
+                            <p class="d-none d-lg-block"><a class="btn btn-primary" href="/about">Learn more about <b>Agapay</b>Aid</a></p>
                         </div>
                     </div>
-
                 </div>
-                <!-- /.card -->
+                <div class="carousel-item active">
+                    <img src="/images/ec2img.png" class="d-block w-100" alt="EC2 Image">
+                    <div class="carousel-caption text-start">
+                        <div class="col-lg-6 col-md-12 p-lg-5 mx-auto my-5">
+                            <h1 class="text-white d-none d-sm-block">“Together, we stand stronger in the face of adversity.”</h1>
+                            <br class="d-none d-lg-block" />
+                            <p class="d-none d-lg-block">
+                                Agapay Aid is a web-based application dedicated to aiding the disaster relief efforts in the Philippines.
+                                Our application streamlines the management of evacuation centers, ensuring efficient resource allocation, equitable relief goods distribution, staff coordination, and seamless registration of evacuees.
+                            </p>
+                            <br class="d-none d-lg-block" />
+                            <p class="d-none d-lg-block"><a class="btn btn-primary" href="/about">Learn more about <b>Agapay</b>Aid</a></p>
+                        </div>
+                    </div>
+                </div>
+                <div class="carousel-item">
+                    <img src="/images/ec3img.png" class="d-block w-100" alt="EC3 Image">
+                    <div class="carousel-caption text-start">
+                        <div class="col-lg-6 col-md-12 p-lg-5 mx-auto my-5">
+                            <h1 class="text-white d-none d-sm-block">“Together, we stand stronger in the face of adversity.”</h1>
+                            <br class="d-none d-lg-block" />
+                            <p class="d-none d-lg-block">
+                                Agapay Aid is a web-based application dedicated to aiding the disaster relief efforts in the Philippines.
+                                Our application streamlines the management of evacuation centers, ensuring efficient resource allocation, equitable relief goods distribution, staff coordination, and seamless registration of evacuees.
+                            </p>
+                            <br class="d-none d-lg-block" />
+                            <p class="d-none d-lg-block"><a class="btn btn-primary" href="/about">Learn more about <b>Agapay</b>Aid</a></p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <button class="carousel-control-prev" type="button" data-bs-target="#myCarousel" data-bs-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Previous</span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#myCarousel" data-bs-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Next</span>
+            </button>
+        </div>
+    }
+}
+
+
+<!-- Inbox -->
+@if (Model.UserType == "EC Staff")
+{
+    <form method="POST" id="clickableForm">
+        <div class="container">
+            <div class="row justify-content-center">
+                <div class="col-md-14">
+                    <div class="card">
+                        <div class="card-header">
+                            <h3 class="card-title text-primary"><b>Inbox</b></h3>
+                        </div>
+                        <div class="card-body p-1">
+                            <div class="table-responsive mailbox-messages" style="max-height: 160px; overflow-y: auto;">
+                                <table class="table table-hover">
+                                    <tbody>
+                                        @foreach (var item in Model.listNotification)
+                                        {
+                                            <input type="hidden" id="notificationID" name="notificationID" value="@item.notificationID">
+                                            <tr class="openMail clickable-row" data-notificationid="@item.notificationID">
+                                                <td class="mailbox-date">@item.sentAt</td>
+                                                @if (@item.isRead == "Sent")
+                                                {
+                                                    <td class="mailbox-subject"><b>@item.message</b><br></td>
+                                                    <td class="mailbox-date text-danger"><i class="bi bi-envelope-fill"></i></td>
+                                                }
+                                                else if (@item.isRead == "Read")
+                                                {
+                                                    <td class="mailbox-subject">@item.message<br></td>
+                                                    <td class="mailbox-date text-success"><i class="bi bi-envelope-paper-fill"></i></td>
+                                                }
+                                            </tr>
+                                        }
+                                    </tbody>
+                                </table>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
-</div>
-
-
-
-<!-- MODAL-->
-<div class="modal fade" id="modal-msg" tabindex="-1">
-    <div class="modal-dialog modal-md">
-        <div class="modal-content">
-            <div class="modal-header">
-                <h5 class="modal-title" id="modal-msg-title"></h5>
-                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-            </div>
-            <div class="modal-body" id="modal-msg-body"></div>
-            <div class="modal-footer text-right">
-                <a href="/evacuationcenter/profile" class="btn btn-secondary" data-dismiss="modal">Go to assigned Center</a>
-            </div>
-        </div>
-    </div>
-</div>
+        
+    </form>
+}
 
 <script>
-    document.addEventListener('DOMContentLoaded', function () {
-        // Handle click on table rows
-        var mailRows = document.querySelectorAll('.openMail');
-        mailRows.forEach(function (row) {
-            row.addEventListener('click', function () {
-                var subject = this.getAttribute('data-msgsubj');
-                var from = this.getAttribute('data-msgfrom');
-                var date = this.querySelector('.mailbox-date').textContent;
-                var body = this.querySelector('.mailbox-subject').innerHTML;
-                var evacuationCenter = this.getAttribute('data-evacuation-center');
-                var disasterName = this.getAttribute('data-disaster-name');
-
-                // Set modal content dynamically
-                document.getElementById('modal-msg-title').textContent = subject;
-                document.getElementById('modal-msg-body').innerHTML = '<h6>From: <span id="msg-from">' + from + '</span><span class="mailbox-read-time float-right"><span id="msg-date">' + date + '</span></span></h6> <br>' +
-                    '<p>Evacuation Center: ' + evacuationCenter + '</p>' +
-                    '<p>Disaster Name: ' + disasterName + '</p>';
-
-                // Show the modal
-                var modal = new bootstrap.Modal(document.getElementById('modal-msg'));
-                modal.show();
-            });
+    $(document).ready(function () {
+        $(".clickable-row").click(function () {
+            // Submit the form
+            $("#clickableForm").submit();
         });
     });
 </script>
-<!-- End Inbox -->
 
-
-@*<script>
-    function showInfo(disasterType, description, dateOccured) {
-        // Set the content of the modal with the provided info
-        document.getElementById('disasterType').innerText = disasterType;
-        document.getElementById('description').innerText = description;
-        document.getElementById('dateOccured').innerText = dateOccured;
-    }
-</script>*@
-
-
-@*<!-- MODAL -->
-<div class="modal fade" id="modal-msg" tabindex="-1" aria-labelledby="modal-msg-title" aria-hidden="true">
-    <div class="modal-dialog modal-lg">
-        <div class="modal-content">
-            <div class="modal-header">
-                <h4 class="modal-title" id="modal-msg-title"></h4>
-                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                    <span aria-hidden="true">×</span>
-                </button>
-            </div>
-            <div class="modal-body" id="modal-msg-body"></div>
-            <div class="modal-footer text-right">
-                <button type="button" class="btn btn-default" data-dismiss="modal">(placeholder)</button>
-            </div>
-        </div>
-    </div>
-</div>*@
-
-
-@*<script>
-    $(document).ready(function () {
-        // Handle click on table rows
-        $('.openMail').on('click', function () {
-            var subject = $(this).data('msgsubj');
-            var from = $(this).data('msgfrom');
-            var date = $(this).find('.mailbox-date').text();
-            var body = $(this).find('.mailbox-subject').html();
-            var evacuationCenter = $(this).data('evacuation-center');
-            var disasterName = $(this).data('disaster-name');
-
-            // Set modal content dynamically
-            $('#modal-msg-title').text(subject);
-            $('#modal-msg-body').html('<h6>From: <span id="msg-from">' + from + '</span><span class="mailbox-read-time float-right"><span id="msg-date">' + date + '</span></span></h6> <br>' +
-                '<p>Evacuation Center: ' + evacuationCenter + '</p>' +
-                '<p>Disaster Name: ' + disasterName + '</p>');
-
-            // Show the modal
-            $('#modal-msg').modal('show');
-        });
-    });
-</script>*@
-
-
-
+<!-- Latest Disaster -->
 <div class="container form-container1">
     <div class="container form-container-content1">
         <!-- Title, Info Button, Menu Button -->
