--- a/Pages/account/Complete.cshtml
+++ b/Pages/account/Complete.cshtml
@@ -38,6 +38,25 @@
                         errorMessage = "Assignment not found with the provided assignmentID.";
                     }
                 }
+
+                // Retrieve the last inserted logID
+                string? lastInsertLogID;
+                string lastInsertLogSql = "SELECT MAX(logID) FROM table_log WHERE tableID = @tableID AND logType = 'Update'";
+                using (MySqlCommand lastInsertLogCommand = new MySqlCommand(lastInsertLogSql, connection))
+                {
+                    lastInsertLogCommand.Parameters.AddWithValue("@tableID", assignmentID);
+                    lastInsertLogID = lastInsertLogCommand.ExecuteScalar()?.ToString();
+                }
+
+                // Update userID in table_log
+                string? UserId = HttpContext.Session.GetString("UserId");
+                string updateUserIdSql = "UPDATE table_log SET userID = @userID WHERE logID = @logID";
+                using (MySqlCommand updateUserIdCommand = new MySqlCommand(updateUserIdSql, connection))
+                {
+                    updateUserIdCommand.Parameters.AddWithValue("@userID", UserId);
+                    updateUserIdCommand.Parameters.AddWithValue("@logID", lastInsertLogID);
+                    updateUserIdCommand.ExecuteNonQuery();
+                }
             }
         }
         else
