--- a/Pages/disaster/profile/entrylog/CheckIn.cshtml
+++ b/Pages/disaster/profile/entrylog/CheckIn.cshtml
@@ -204,6 +204,7 @@ else
             </div>
             <div class="modal-body">
                 <p>Are you sure you want to check-in the selected individuals as evacuees at @Model.logInfo.centerName?</p>
+                <p class="text-danger"><b>This cannot be undone.</b></p>
             </div>
             <div class="modal-footer">
                 <button type="button" class="btn btn-secondary" data-bs-dismiss="modal" id="cancelBtn">Cancel</button>
