--- a/Pages/disaster/profile/entrylog/Index.cshtml
+++ b/Pages/disaster/profile/entrylog/Index.cshtml
@@ -316,7 +316,7 @@ else
 																	View Entry Details
 																</a>
 															</li>
-															@if (@Model.logInfo.status == "Open")
+															@*@if (@Model.logInfo.status == "Open")
 															{
 																@if (Model.UserType == "Admin")
 																{
@@ -339,7 +339,7 @@ else
 																		</li>
 																	}																	
 																}
-															}
+															}*@
 														</ul>
 													}
 													else if (@item.entryStatus == "Check-out")
