--- a/Pages/disaster/profile/inventory/Index.cshtml
+++ b/Pages/disaster/profile/inventory/Index.cshtml
@@ -271,11 +271,11 @@ else
 									<th style="text-align:center;">#</th>
 									<th style="text-align:center;">Item</th>
 									<th style="text-align:center;">Type</th>
-									<th style="text-align:center;">Unit Measure</th>
 									<th style="text-align:center;">
 										Qty<br />
 										<small>(Remaining/Total)</small>
 									</th>
+									<th style="text-align:center;">Time to Expiry</th>
 									<th style="text-align:center;">Remarks</th>
 									<th> </th>
 								</tr>
@@ -284,12 +284,37 @@ else
 								@{ var counter = 1; }
 								@foreach (var item in Model.listInventory)
 								{
+									string message = "";
+									if (!string.IsNullOrEmpty(item.earliestExpiryDate))
+									{
+										var expiryDate = DateTime.Parse(item.earliestExpiryDate);
+										var currentDate = DateTime.Now;
+										var daysRemaining = (expiryDate - currentDate).Days;
+
+										if (daysRemaining > 365)
+										{
+											var years = daysRemaining / 365;
+											var remainingDays = daysRemaining % 365;
+											var months = remainingDays / 30;
+											message = $"{years} years and {months} months";
+										}
+										else if (daysRemaining > 31)
+										{
+											var months = daysRemaining / 30;
+											message = $"{months} months";
+										}
+										else
+										{
+											message = daysRemaining > 0 ? $"{daysRemaining} days" : "Expired";
+										}
+									}
+
 									<tr style="text-align:center;">
 										<td width="5%">@counter</td>
 										<td width="20%">@item.itemName</td>
 										<td width="15%">@item.itemType</td>
-										<td width="17%">@item.unitMeasure</td>
-										<td width="18%">@item.remainingQty/@item.qty</td>
+										<td width="18%">@item.remainingQty/@item.qty @item.unitMeasure.ToLower()</td>
+										<td width="17%">@message</td>
 										@if (@item.remarks == "-")
 										{
 											<td width="20%" style="text-align:center;">@item.remarks</td>
@@ -393,8 +418,8 @@ else
 			responsive: true,
 			pageLength: 25,
 			columnDefs: [
-				{ "orderable": true, "targets": [0, 1, 3] }, // Sortable columns
-				{ "orderable": false, "targets": [2, 4, 5, 6] } // Non-sortable columns
+				{ "orderable": true, "targets": [0, 1] }, // Sortable columns
+				{ "orderable": false, "targets": [2, 3, 4, 5, 6] } // Non-sortable columns
 			]
 		});
 
